package com.donatrack.logistica.domain.entities;

public enum EstadoEntrega {
  PENDIENTE,
  EN_TRASLADO,
  ENTREGADA,
  NO_RECIBIDA
}
