package com.donatrack.logistica.domain.entities;

public enum EstadoPlanificacion {
  PENDIENTE,
  RECIBIDA,
  PROCESADA
}
